2021-10-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (ee-firefox-program, ee-googlechrome-program)
	(find-firefox, find-googlechrome): moved from the file
	eev-brxxx.el to eev-plinks.el.

2021-10-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-firefox-page): use `ee-firefox-program'.
	(ee-find-googlechrome-page): use `ee-googlechrome-program'.

	* eev-intro.el (find-eev-install-intro): new section: "5.4.
	`package-install-file'".
	(find-eev-install-intro): new section: "5.5. `use-package'".

	* eev-on-windows.el (ee-dospath-to-unix, ee-dospath-to-dos)
	(ee-dospath-split, ee-dospath-unsplit, ee-dospath-add)
	(ee-add-to-PATH): deleted.

	* eev-testblocks.el (ee-insert-test-racket-mode): new function.

2021-10-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-on-windows.el (ee-download-with-eww, ee-use-eshell)
	(ee-use-shell, ee-use-bullets, ee-use-red-stars)
	(ee-use-gnu-linux, ee-use-windows): new functions.

	* eev-audiovideo.el (ee-mpv-program): new variable.
	(ee-find-mpv-video): use `ee-mpv-program'.

	* eev-brxxx.el (ee-googlechrome-program): new variable.
	(ee-firefox-program): new variable.
	(find-googlechrome): use `ee-googlechrome-program'.
	(find-firefox): use `ee-firefox-program'.

	* eev-plinks.el (ee-wget-program): new variable.
	(find-wget00): use `ee-wget-program'.

	* eev-hlinks.el (ee-find-evardescr-links): added `find-evariable'.
	(ee-find-efunctiondescr-links): added `find-efunction'.

2021-10-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eek): new function.

2021-10-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (ee-urlretrieve-header1, ee-urlretrieve-ok)
	(ee-urlretrieve-assert-ok): new functions.

	* eev-code.el: added a (code-c-d "eshell" ...).

	* eev-plinks.el (ee-very-primitive-wget1, ee-eshell/fakewget): new
	functions.

2021-10-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (ee-very-primitive-wget0): new function.
